# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  13 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Changed net.lo depend from isdn4linux to isdn, #102846

  12 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Split /sbin/rc into more modular pieces to allow easy porting to the bsd's.
    Thanks goes to Mike who did the initial version.

    Split out devfs and udev stuff to addons.

    Lots of syntax and quoting fixes.

    Move noblock_read() back to /sbin/rc, as its used there.

  12 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Set essid before mode for ad-hoc/master configurations, #105452

    Fixed force_any associate order option, #99256

  09 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Add PKG_CONFIG_PATH to incremental env var list #105384 by Sven Wegener.

  08 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Added ifplugd module, but we prefer netplug by default

  07 Sep 2005; Roy Marples <uberlord@gentoo.org>:
 
    replace the apipa module with a generic arping module which can now
    do gateway detection and apply a configuration for it as well as the
    apipa stuff

    updated env_whitelist so that nothing is allowed by default

    system module now runs through pre instead of post and is run by
    lo as well, so dns_ options can be configured for it

    netplug and wpa_supplicant understand negative timeouts to be defined
    as "return immediately and don't wait for success"

    dns options and sortlist now get merged in resolv.conf too

    bridge error message regarding the kernel module should work with
    newer versions of bridge-utils

  06 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    dns_*, nis_* and ntp_* options now work globally too, but are overridden
    by specific interface/essid/mac ones.

    dhcpcd and pump now support the "options" and "sortlist" directives too,
    #104870
